Perkin-UAT/force-app/main/default/objects/Reseller_Discount_Table__c/Reseller_Discount_Table__c.object-meta.xml
<CustomObject>
    <label>Reseller Discount Table</label>
    <nameField>
        <displayFormat>RD-{00000}</displayFormat>
        <label>Reseller Discount Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reseller Discount Tables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>