Perkin-UAT/force-app/main/default/objects/Reseller_Discount_Table__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>input required: Should be a price book  type: Academic, Government or Commercial, or blank to apply to all</description>
    <inlineHelpText>Should be a price book  type: Academic, Government or Commercial, or blank to apply to all</inlineHelpText>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academic</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>