Perkin-UAT/force-app/main/default/objects/Reseller_Discount_Table__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>Formula pulls Reselling period Effective date from Account</description>
    <formula>Reseller_Account__r.Reseller_Effective_Date__c</formula>
    <inlineHelpText>The Accounts Effective Date for reselling</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>