Perkin-UAT/force-app/main/default/objects/Reseller_Discount_Table__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Reseller Discount Tables</relationshipLabel>
    <relationshipName>Reseller_Discount_Tables</relationshipName>
    <type>Lookup</type>
</CustomField>