Perkin-UAT/force-app/main/default/objects/Reseller_Discount_Table__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Reseller Discount Tables</relationshipLabel>
    <relationshipName>Reseller_Discount_Tables</relationshipName>
    <type>Lookup</type>
</CustomField>