Perkin-UAT/force-app/main/default/objects/Reseller_Discount_Table__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>From Product...the License Type</description>
    <formula>Product__r.License_Type_INF__c</formula>
    <inlineHelpText>From Product...the License Type</inlineHelpText>
    <label>Type</label>
    <type>Text</type>
</CustomField>