Perkin-UAT/force-app/main/default/objects/Reseller_Discount_Table__c/listViews/Reseller_Discounts_All.listView-meta.xml
<ListView>
    <fullName>Reseller_Discounts_All</fullName>
    <columns>NAME</columns>
    <columns>Reseller__c</columns>
    <columns>Discount__c</columns>
    <columns>Price_Book__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>Reseller Discounts - (All)</label>
</ListView>